--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-	
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Document</title>
+		<link rel="stylesheet" href="css/styles.css">
+	</head>
+	<body>
+		<nav class="top-navigation">
+			<div class="content">
+				
+			</div>
+		</nav>
+		
+	</body>
 </html>
