--- a/index.html
+++ b/index.html
@@ -8,9 +8,26 @@
 	<body>
 		<nav class="top-navigation">
 			<div class="content">
-				
+				<ul class="links">
+					<li class="active">Meet Karma</li>
+					<li>How It works</li>
+					<li>Store</li>
+					<li>Blog</li>
+					<li>Help</li>
+					<li>Log in</li>
+				</ul>
+				<!-- Its best practise to have floating elements above non-floating elements -->
+				<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
 			</div>
 		</nav>
-		
+		<section class="introduction">
+			<div class="content">
+				<h1>Introducing Karma</h1>
+				<h3>Bring WiFi with you, everywhere you go.</h3>
+				<div class="buttons">
+				<button class="big-button">Learn More</button>
+			</div>
+			</div>
+		</section>
 	</body>
 </html>
