--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<li>Store</li>
 					<li>Blog</li>
 					<li>Help</li>
-					<li>Log in</li>
+					<li>Log in Here</li>
 				</ul>
 				<!-- Its best practise to have floating elements above non-floating elements -->
 				<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
