--- a/index.html
+++ b/index.html
@@ -2,32 +2,78 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Document</title>
-		<link rel="stylesheet" href="css/styles.css">
-	</head>
-	<body>
-		<nav class="top-navigation">
-			<div class="content">
-				<ul class="links">
-					<li class="active">Meet Karma</li>
-					<li>How It works</li>
-					<li>Store</li>
-					<li>Blog</li>
-					<li>Help</li>
-					<li>Log in Here</li>
-				</ul>
-				<!-- Its best practise to have floating elements above non-floating elements -->
-				<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
-			</div>
-		</nav>
-		<section class="introduction">
-			<div class="content">
-				<h1>Introducing Karma</h1>
-				<h3>Bring WiFi with you, everywhere you go.</h3>
-				<div class="buttons">
-				<button class="big-button">Learn More</button>
-			</div>
-			</div>
-		</section>
-	</body>
-</html>
+		<title>Responsive Business Theme</title>
+		<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+			<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+			<link  rel="stylesheet" href="css/font-awesome.min.css">
+			<link rel="stylesheet" href="css/styles.css">
+		</head>
+		<body>
+			<nav class="top-navigation">
+				<div class="content">
+					<ul class="links">
+						<li class="active">Meet Karma</li>
+						<li>How It works</li>
+						<li>Store</li>
+						<li>Blog</li>
+						<li>Help</li>
+						<li>Log in Here</li>
+					</ul>
+					<!-- Its best practise to have floating elements above non-floating elements -->
+					<img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26px">
+				</div>
+			</nav>
+			<section class="introduction">
+				<div class="content">
+					<h1>Introducing Karma</h1>
+					<h3>Bring WiFi with you, everywhere you go.</h3>
+					<div class="buttons">
+						<button class="big-button">Learn More</button>
+					</div>
+				</div>
+			</section>
+			<section class="cases">
+				<div class="content">
+					<h2>Everyone needs a little Karma</h2>
+					<ul class="devicelist">
+						<li class="devices">
+							<img src="images/icon-devices.svg" alt="Internet for all devices image">
+							<div class="caption">
+								<h3>Internet for all devices</h3>
+							</div>
+						</li>
+						<li class="devices"><img src="images/icon-coffee.svg" alt="Boost your productivity image">
+							<div class="caption">
+								<h3>Boost your productivity</h3>
+							</div>
+						</li>
+						<li class="devices"><img src="images/icon-refill.svg" alt="Pay as you go image">
+							<div class="caption">
+								<h3>Pay as you go</h3>
+							</div>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<footer class="social">
+				<div class="content">
+					<hr>
+					<h5>Joins us on</h5>
+					<ul class="icons">
+						<li class="twitter">
+							<i class="fa fa-twitter"></i>
+						</li>
+						<li class="facebook">
+							<i class="fa fa-facebook"></i>
+						</li>
+						<li class="instagram">
+							<i class="fa fa-instagram"></i>
+						</li>
+					</ul>
+					<span class="copy">
+                © Karma Mobility, Inc.
+            </span>
+				</div>
+			</footer>
+		</body>
+	</html>
